# microcircuit-PD14-model

./: README.md
PyNEST/: README.md  pyproject.toml
PyNEST/examples/: microcircuit_example.ipynb  run_microcircuit.py
PyNEST/src/microcircuit/: __init__.py  helpers.py  model.py  parameter_definitions.py
docs/: .gitignore  conf.py  index.md
docs/benchmarking/: benchmarking.md
docs/benchmarking/figures/: performance_summary.md
docs/model_description/: ModelDescription_microcircuit-PD14-model.tex
docs/model_description/figures/: NetworkSketch_microcircuit-PD14-model.fodg
docs/publications/_scripts/: generate_pd14_charts.py
