# -*- coding: utf-8 -*-
#
# network.py
#
# This file is part of NEST.
#
# Copyright (C) 2004 The NEST Initiative
#
# NEST is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 2 of the License, or
# (at your option) any later version.
#
# NEST is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with NEST.  If not, see <http://www.gnu.org/licenses/>.
#
# SPDX-License-Identifier: GPL-2.0-or-later

[project]
name = "microcircuit"
readme = "README.md"
dynamic = ["version", "description"]  ## see __init__.py
license = "GPL-2.0-or-later"
license-files = ["LICENSE"]
authors = [
    { name = "Tom Tetzlaff", email = "t.tetzlaff@fz-juelich.de" },
    { name = "Johanna Senk", email = "j.senk@fz-juelich.de" }    
]
maintainers = [
    { name = "Tom Tetzlaff", email = "t.tetzlaff@fz-juelich.de" },
    { name = "Johanna Senk", email = "j.senk@fz-juelich.de" }    
]
keywords = [
    "neuroscience",
    "computational neuroscience", 
    "cortical microcircuit",
    "NEST simulator",
    "neural networks",
    "brain modeling"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

requires-python = ">=3.8"
dependencies = [
    "docopt-ng",
    "matplotlib",
    # "nest-simulator",   ## needs `pip install nest-simulator` to become available
    "numpy",
    "psutil",
    "ruamel.yaml",
    "scipy",
]

[project.urls]
"Homepage" = "https://github.com/INM-6/microcircuit-PD14-model"
"Documentation" = "https://github.com/INM-6/microcircuit-PD14-model/blob/main/README.md"
"Repository" = "https://github.com/INM-6/microcircuit-PD14-model"
"Bug Tracker" = "https://github.com/INM-6/microcircuit-PD14-model/issues"
"Changelog" = "https://github.com/INM-6/microcircuit-PD14-model/releases"

[project.scripts]
microcircuit = "microcircuit.__main__:main"

[project.optional-dependencies]
test = [
    "pydocstyle",
    "pylint",
    "pytest",
    "pytest-black",
    "pytest-cov",
    "pytest-flake8",
    "pytest-mypy",
    "pytest-pydocstyle",
    "pytest-pylint",
    "pytest-xdist",
]
dev = [
    "black",
    "bump2version",
    "flake8",
    "mypy",
    "pre-commit",
    "pydocstyle",
    "pylint",
    "pytest",
    "pytest-black",
    "pytest-cov",
    "pytest-flake8",
    "pytest-mypy",
    "pytest-pydocstyle",
    "pytest-pylint",
    "pytest-xdist",
]
doc = [
    "sphinx",
    "sphinx-autodoc-typehints",
    "pygments",
    #"myst-parser",
    "myst-nb",
    "sphinx-design",
    "sphinx-material",
    "sphinx-gallery",
    "sphinxcontrib-bibtex",
    "recommonmark",
]

[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core >=3.2,<4"]
